--- a/Atlassian-efs.template
+++ b/Atlassian-efs.template
@@ -160,7 +160,7 @@
                       }
                     ]
                   },
-                  "efs"
+                  "efs",
                   {
                     "Ref": "StackId"
                   }
