Adding correct values for RDS tags

--- a/Atlassian-DB.template
+++ b/Atlassian-DB.template
@@ -205,27 +205,31 @@
           {
             "Key": "MonitoringProfile",
             "Value": {
-              "Fn::Join": [
-                "",
-                [
-                  {
-                    "Ref": "Application"
-                  },
-                  "DB"
-                ]
-              ]
+              "Ref": "Application"
             }
           },
           {
             "Key": "Name",
             "Value": {
               "Fn::Join": [
-                "",
+                "-",
                 [
                   {
-                    "Ref": "AWS::StackName"
+                    "Ref": "EnvironmentName"
                   },
-                  "Database"
+                  {
+                    "Fn::FindInMap": [
+                      "ProductNameLowerCase",
+                      "Product",
+                      {
+                        "Ref": "Application"
+                      }
+                    ]
+                  },
+                  "rds",
+                  {
+                    "Ref": "StackId"
+                  }
                 ]
               ]
             }
